# snippetia

./: ADVANCED_FEATURES_IMPLEMENTATION.md  COMPLETE_PROJECT_STATUS.md  COMPLETE_SYSTEM_OVERVIEW.md  ENHANCED_FEATURES_SUMMARY.md  ENTERPRISE_GRADE_BACKEND_ANALYSIS.md  FINAL_PROJECT_SUMMARY.md  LICENSE  README.md  REFACTORING_SUMMARY.md  VCS_INTEGRATION_GUIDE.md  build.gradle.kts  docker-compose.yml  gradlew.bat  settings.gradle.kts
backend/: .env.example  Dockerfile  build.gradle.kts
backend/src/main/kotlin/com/snippetia/: SnippetiaApplication.kt
backend/src/main/kotlin/com/snippetia/application/service/: NotificationService.kt  UserService.kt
backend/src/main/kotlin/com/snippetia/config/: SecurityConfig.kt
backend/src/main/kotlin/com/snippetia/controller/: AiBotController.kt  AnalyticsController.kt  AuthController.kt  GlobalOrchestrationController.kt  ModerationController.kt  SnippetController.kt  SocialController.kt
backend/src/main/kotlin/com/snippetia/domain/entity/: Category.kt  CodeSnippet.kt  Notification.kt  Role.kt  User.kt  WebAuthnCredential.kt
backend/src/main/kotlin/com/snippetia/domain/repository/: CodeSnippetRepository.kt  NotificationRepository.kt  UserRepository.kt
backend/src/main/kotlin/com/snippetia/dto/: AnalyticsDTOs.kt  AuthDTOs.kt  ModerationDTOs.kt  SnippetDTOs.kt  SocialDTOs.kt  VcsDTOs.kt
backend/src/main/kotlin/com/snippetia/exception/: BusinessException.kt  ResourceNotFoundException.kt  UnauthorizedException.kt
backend/src/main/kotlin/com/snippetia/model/: AdvancedModels.kt  Channel.kt  CodeSnippet.kt  Comment.kt  Commit.kt  DeveloperShowcase.kt  Event.kt  EventAttendee.kt  Like.kt  ModerationAction.kt  Notification.kt  Repository.kt  Role.kt  ShowcaseLike.kt  SnippetVersion.kt  Subscription.kt  User.kt  WebAuthnCredential.kt
backend/src/main/kotlin/com/snippetia/repository/: AdvancedRepositories.kt  ChannelRepository.kt  CodeSnippetRepository.kt  CommentRepository.kt  CommitRepository.kt  EventAttendeeRepository.kt  EventRepository.kt  LikeRepository.kt  ModerationActionRepository.kt  NotificationRepository.kt  RepositoryRepository.kt  RoleRepository.kt  ShowcaseLikeRepository.kt  ShowcaseRepository.kt  SnippetVersionRepository.kt  SubscriptionRepository.kt  UserRepository.kt  WebAuthnCredentialRepository.kt
backend/src/main/kotlin/com/snippetia/security/: JwtAuthenticationEntryPoint.kt  JwtRequestFilter.kt  JwtTokenProvider.kt  OAuth2AuthenticationFailureHandler.kt  OAuth2AuthenticationSuccessHandler.kt  RateLimitFilter.kt  WebAuthnAuthenticationFilter.kt
backend/src/main/kotlin/com/snippetia/service/: AIOrchestrationService.kt  AnalyticsService.kt  AuthService.kt  ChannelMonetizationService.kt  ChannelService.kt  EmailService.kt  EnterpriseMLOpsService.kt  EnterpriseSecurityService.kt  EventService.kt  FileStorageService.kt  GlobalScaleOrchestrationService.kt  ModerationService.kt  NotificationService.kt  PaymentService.kt  RedisService.kt  SearchService.kt  SecurityScanService.kt  ShowcaseService.kt  SnippetService.kt  SubscriptionService.kt  UserService.kt  VcsService.kt  WebAuthnService.kt
backend/src/main/resources/: application.properties
backend/src/test/kotlin/com/snippetia/: SnippetiaApplicationTests.kt
backend/src/test/kotlin/com/snippetia/controller/: SnippetControllerTest.kt
backend/src/test/kotlin/com/snippetia/service/: SnippetServiceTest.kt
backend/src/test/resources/: application-test.properties
frontend/: Dockerfile.web  build.gradle.kts
frontend/src/androidMain/: AndroidManifest.xml
frontend/src/androidMain/kotlin/com/snippetia/: MainActivity.kt
frontend/src/commonMain/kotlin/com/codeshare/data/local/: CodeSnippetDao.kt
frontend/src/commonMain/kotlin/com/snippetia/: SnippetiaApp.kt
frontend/src/commonMain/kotlin/com/snippetia/data/api/: ApiClient.kt  AuthApiService.kt  SnippetApiService.kt
frontend/src/commonMain/kotlin/com/snippetia/debug/: DebugTools.kt
frontend/src/commonMain/kotlin/com/snippetia/di/: AppModule.kt
frontend/src/commonMain/kotlin/com/snippetia/integration/: McpServerManager.kt
frontend/src/commonMain/kotlin/com/snippetia/ui/: SnippetiaApp.kt
frontend/src/desktopMain/kotlin/com/snippetia/: main.kt
frontend/src/iosMain/kotlin/com/codeshare/: Main.kt
frontend/src/jsMain/kotlin/com/snippetia/: main.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
nginx/: nginx.conf
scripts/: deploy.sh
shared/: build.gradle.kts
shared/src/androidMain/kotlin/com/example/snippetia/: Platform.android.kt
shared/src/androidUnitTest/kotlin/com/example/snippetia/: Test.android.kt
shared/src/commonMain/kotlin/com/example/snippetia/: Greeting.kt  Platform.kt
shared/src/commonTest/kotlin/com/example/snippetia/: Test.kt
shared/src/iosMain/kotlin/com/example/snippetia/: Platform.ios.kt
shared/src/iosTest/kotlin/com/example/snippetia/: Test.ios.kt
snippetiaAndroid/: build.gradle.kts
snippetiaIOS/snippetiaIOS.xcodeproj/: project.pbxproj
vcs/: CMakeLists.txt  Makefile  README.md  build.sh
vcs/demo/: advanced_demo.sh
vcs/docs/: ADVANCED_FEATURES.md  PERFORMANCE_GUIDE.md
vcs/include/: svcs.h
vcs/src/cli/: advanced_parser.cpp  advanced_parser.hpp  command_parser.cpp  command_parser.hpp  enhanced_main.cpp  main.cpp
vcs/src/cli/commands/: snippetia.cpp
vcs/src/core/: branch.c  commit.c  compress.c  dag.cpp  dag.hpp  diff.c  hash.c  index.c  merge_engine.cpp  merge_engine.hpp  object.c  patch_engine.cpp  patch_engine.hpp  performance_monitor.cpp  performance_monitor.hpp  rebase_engine.hpp  remote.c  repository.c  repository_analytics.hpp  smart_merge.hpp  utils.c
vcs/src/integration/: cloud_sync_engine.hpp  snippetia_sync.c
vcs/src/ui/: terminal_ui.cpp  terminal_ui.hpp
vcs/tests/: test_advanced_features.cpp  test_commit.c  test_comprehensive.cpp  test_hash.c  test_integration.cpp  test_object.c  test_performance.cpp  test_repository.c
vcs/tools/: analytics_tool.cpp  performance_monitor.cpp
(+40 files in other folders)
